--- a/ml.ipynb
+++ b/ml.ipynb
@@ -1,6 +1,30 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "beefcb75",
+   "metadata": {},
+   "source": [
+    "# Unfairness Demo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f045d006",
+   "metadata": {},
+   "source": [
+    "This notebook is a demonstration of how unfairness can be propagated by ML models. I used the COMPASS dataset on [kaggle](https://www.kaggle.com/datasets/danofer/compass) to train a model (a Random Forest Regressor) to predict the decile score for a candidate. Ethnicity was one of the parameters used for training the model. My intent is to showcase how choosing an unfair model for decision-making in a consequential scenario can be very dangerous."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2aa8215a",
+   "metadata": {},
+   "source": [
+    "## Setting up the environment"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "830de6a4",
@@ -21,6 +45,14 @@
    "outputs": [],
    "source": [
     "pd.set_option('display.max_columns', None)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c521cb3",
+   "metadata": {},
+   "source": [
+    "## Importing and viewing the data"
    ]
   },
   {
@@ -494,6 +526,14 @@
    ],
    "source": [
     "df[potential_features]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80a55a64",
+   "metadata": {},
+   "source": [
+    "## Pre-processing the data"
    ]
   },
   {
@@ -2057,6 +2097,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1ec7e566",
+   "metadata": {},
+   "source": [
+    "## Training the model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
    "id": "bd6cca6f",
@@ -2793,6 +2841,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b5ca4bfa",
+   "metadata": {},
+   "source": [
+    "## Testing the model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 29,
    "id": "e0e1f6e8",
@@ -3018,6 +3074,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8612adfa",
+   "metadata": {},
+   "source": [
+    "## Analysing the biases in the model's predictions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 32,
    "id": "a03c0380",
@@ -3037,6 +3101,14 @@
    "source": [
     "sns.barplot(study_result.groupby(\"Ethnic_Code_Text\")[\"DecileScore\"].mean().sort_values())\n",
     "plt.xticks(rotation=90);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9febcfbc",
+   "metadata": {},
+   "source": [
+    "As we can see, the average decile score varies significantly with ethinicity. Hence there is a correlation between the ethnicity of a person and their decile score according to our model.  "
    ]
   },
   {
@@ -3085,6 +3157,14 @@
     "       'RecSupervisionLevel'])\n",
     "\n",
     "template"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3e7bb25",
+   "metadata": {},
+   "source": [
+    "We are trying to see the impact of ethnicity on the prediction of decile score by predicting for two candidates having the exact same values for all the features except ethnicity."
    ]
   },
   {
@@ -3271,6 +3351,14 @@
     "test_results = model.predict(test_candidates_scaled)\n",
     "test_results = pd.Series(test_results, index=test_candidates.index)\n",
     "test_results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b004603",
+   "metadata": {},
+   "source": [
+    "So we can see two people having different decile scores purely because of their differences in ethnicities. If we used this model in real world, it would certainly lead to racial discrimination!"
    ]
   }
  ],
